[gd_scene load_steps=8 format=3 uid="uid://c7mi1mr181fc4"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_eh826"]
[ext_resource type="FontFile" uid="uid://bdbhb41acpct" path="res://assets/kenvector_future_thin.ttf" id="2_p34vr"]
[ext_resource type="Texture2D" uid="uid://bsofp63q76he6" path="res://assets/player_small.png" id="3_gys87"]
[ext_resource type="Texture2D" uid="uid://cb0jmrica6dd1" path="res://assets/play_button.png" id="4_ykheb"]
[ext_resource type="Texture2D" uid="uid://vwnv1rtnmm2l" path="res://assets/play_button_h.png" id="5_mjt3i"]

[sub_resource type="LabelSettings" id="LabelSettings_vmebm"]
font = ExtResource("2_p34vr")
font_size = 64
font_color = Color(0.383982, 0.264651, 0.999975, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x2vdw"]
font = ExtResource("2_p34vr")
font_size = 64
font_color = Color(0.439216, 0.431373, 1, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_eh826")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_vmebm")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_gys87")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_gys87")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_gys87")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Space Rocks!"
label_settings = SubResource("LabelSettings_x2vdw")
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_ykheb")
texture_pressed = ExtResource("5_mjt3i")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
